# ferrum-av

./: Cargo.toml  README.md
.github/workflows/: workflow.yml
signatures/: signatures.txt
src/: cli.rs  error.rs  hasher.rs  main.rs  report.rs  scanner.rs  sigdb.rs  yara_scanner.rs
