[package]
name    = "ferrum-av"
version = "0.1.0"
edition = "2021"
authors = ["ASTRA Labs"]
description = "A transparent, hash-based antivirus engine written in Rust."

[[bin]]
name = "ferrum"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
md-5       = "0.10"
sha1       = "0.10"
sha2       = "0.10"
hex        = "0.4"
walkdir    = "2.5"
colored    = "2.1"
anyhow     = "1.0"
digest     = "0.10"
yara-x     = "1.14.0"
glob       = "0.3.3"

[profile.release]
opt-level = 3
strip     = true
lto       = true